--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,15 @@
   "builds": [
     { "src": "Dockerfile", "use": "@vercel/docker" }
   ],
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "ProjectAsh.settings"
+  },
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/static/$1"
+    },
     { "src": "/(.*)", "dest": "/" }
   ]
 }
