--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "version": 2,
   
+  "builds": [
+    { "src": "app.py", "use": "@vercel/python" },
+    { "src": "staticfiles/**", "use": "@vercel/static" }
+  ],
   "env": {
     "DJANGO_SETTINGS_MODULE": "ProjectAsh.settings"
   },
@@ -10,6 +14,6 @@
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "dest": "/static/$1"
     },
-    { "src": "/(.*)", "dest": "/" }
+    { "src": "/(.*)", "dest": "app.py" }
   ]
 }
